--- a/PhotoSharing/Views/Photo/Create.cshtml
+++ b/PhotoSharing/Views/Photo/Create.cshtml
@@ -4,46 +4,45 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
-
-@using (Html.BeginForm()) {
-    @Html.ValidationSummary(true)
-
-    <fieldset>
-        <legend>PhotoEditModel</legend>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.PhotoID)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.PhotoID)
-            @Html.ValidationMessageFor(model => model.PhotoID)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Title)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Title)
-            @Html.ValidationMessageFor(model => model.Title)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Description)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Description)
-            @Html.ValidationMessageFor(model => model.Description)
-        </div>
-
-        <p>
-            <input type="submit" value="Create" />
-        </p>
-    </fieldset>
-}
-
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    <h2>Create New Photo</h2>
+    @using (Html.BeginForm("Create", "Photo", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    {
+        <fieldset>
+            @Html.ValidationSummary(true)
+
+
+            <div class="editor-label">
+                @Html.LabelFor(model => model.Title)
+            </div>
+            <div class="editor-field">
+                @Html.EditorFor(model => model.Title)
+                @Html.ValidationMessageFor(model => model.Title)
+            </div>
+
+            <div class="editor-label">
+                Photo
+            </div>
+            <div class="editor-field">
+                <input type="file" name="Image" />
+            </div>
+
+            <div class="editor-label">
+                @Html.LabelFor(model => model.Description)
+            </div>
+            <div class="editor-field">
+                @Html.EditorFor(model => model.Description)
+                @Html.ValidationMessageFor(model => model.Description)
+            </div>
+
+            <div>
+                <input type="submit" value="Create" />
+            </div>
+            <div>
+                @Html.ActionLink("Back to List", "Index")
+            </div>
+        </fieldset>
+    }
 </div>
 
 @section Scripts {
