--- a/PhotoSharing/Views/Photo/Index.cshtml
+++ b/PhotoSharing/Views/Photo/Index.cshtml
@@ -6,11 +6,4 @@
 
 <h2>Gallery</h2>
 
-<ul class="photoList">
-    @foreach (var item in Model)
-    {
-        <li>
-        @Html.Partial("_PhotoItem",item)
-        </li>
-    }
-</ul>
+@Html.Partial("_Gallery",Model)
