--- a/PhotoSharing/Views/Photo/_PhotoItem.cshtml
+++ b/PhotoSharing/Views/Photo/_PhotoItem.cshtml
@@ -1,10 +1,5 @@
 ﻿@model PhotoSharing.Models.PhotoDisplayModel
+<a href="@Url.Action("Details", "Photo", new { id = Model.PhotoID })" title="@Model.Title">
+    <img alt="@Model.Description" src="@Url.Action("Image", "Photo", new { id = Model.PhotoID })" />
+</a>
 
-<div>
-    <a href="@Url.Action("Details", "Photo", new { id = Model.PhotoID })">
-        <p>@Model.Title</p>
-        <img style="height:90px;width:90px" alt="@Model.Description" 
-                    src="@Url.Action("Image", "Photo", new { id = Model.PhotoID })" />
-        <p>@Model.Description</p>
-    </a>
-</div>
