--- a/PhotoSharing/Views/Shared/_Layout.cshtml
+++ b/PhotoSharing/Views/Shared/_Layout.cshtml
@@ -2,11 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>@ViewBag.Title - My ASP.NET MVC Application</title>
+        <title>@ViewBag.Title</title>
         <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
         <meta name="viewport" content="width=device-width" />
         @Styles.Render("~/Content/css")
+        <link href="~/Content/StyleSheet1.css" rel="stylesheet" />
         @Scripts.Render("~/bundles/modernizr")
+        @RenderSection("head", false)
     </head>
     <body>
         <header>
